improve db and public info
